@@ -7,14 +7,13 @@ svychisq<-function(formula, design,...) UseMethod("svychisq",design)
 
 
 svychisq.survey.design<-function(formula, design,
-                   statistic=c("F","Chisq","Wald","adjWald","lincom","saddlepoint"),
+                   statistic=c("F","Chisq","Wald","adjWald","lincom","saddlepoint","wls-score"),
                    na.rm=TRUE,...){
   if (ncol(attr(terms(formula),"factors"))>2)
     stop("Only 2-way tables at the moment")
   statistic<-match.arg(statistic)
-  
-  ##if(!is.null(design$postStrata))
-  ##  warning("Post-stratification not implemented")
+
+  if (statistic=="wls-score") return(svychisqzero(formula,design,na.rm=na.rm))
   
   rows<-formula[[2]][[2]]
   cols<-formula[[2]][[3]]
@@ -281,11 +280,13 @@ svychisq.twophase<-function(formula, design,
 
 
 svychisq.svyrep.design<-function(formula, design,
-                   statistic=c("F","Chisq","Wald","adjWald","lincom","saddlepoint"),
+                   statistic=c("F","Chisq","Wald","adjWald","lincom","saddlepoint","wls-score"),
                    na.rm=TRUE,...){
   if (ncol(attr(terms(formula),"factors"))>2)
     stop("Only 2-way tables at the moment")
   statistic<-match.arg(statistic)
+    if (statistic=="wls-score") return(svychisqzero(formula,design,na.rm=na.rm))
+
     
   rows<-formula[[2]][[2]]
   cols<-formula[[2]][[3]]
@@ -441,4 +442,24 @@ summary.svytable<-function(object, statistic=c("F","Chisq","Wald","adjWald","lin
 print.summary.svytable<-function(x,digits=0,...){
   print(round(x$table,digits))
   print(x$statistic,...)
+}
+
+
+
+svychisqzero<-function(formula,design,na.rm){
+    if (ncol(attr(terms(formula), "factors")) > 2) 
+        stop("Only 2-way tables")
+    rows <- formula[[2]][[2]]
+    cols <- formula[[2]][[3]]
+    rowvar <- unique(design$variables[, as.character(rows)])
+    nr <- length(rowvar)
+
+    des<-design[rep(1:nrow(design), nr), ]
+    yind<-as.vector(eval(bquote( model.matrix(~factor(.(rows))+0, model.frame(design)))))
+    k<-rep(1:nr,each=nrow(design))
+    des<-update(des,yind=yind,k=k)
+    ff0<-eval(bquote(yind~factor(k)+factor(.(cols))))
+    ff1<-eval(bquote(~factor(k):factor(.(cols))))
+    m0<-svyglm(ff0, des)
+    svyscoretest(m0, add.terms=ff1,method="pseudo")
 }
